Criando html da seção de equipes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,10 +5,15 @@
     </div>
     <ul class="menu">
       <li class="menu__item">
-        <a href="" class="menu__link menu__link--active">Vagas</a>
+        <a
+          routerLinkActive="menu__link--active"
+          routerLink="vacancies" class="menu__link">Vagas</a>
       </li>
       <li class="menu__item">
-        <a href="" class="menu__link">Equipes</a>
+        <a
+          routerLinkActive="menu__link--active"
+          routerLink="teams"
+          class="menu__link">Equipes</a>
       </li>
       <li class="menu__item">
         <a href="" class="menu__link">Ajuda</a>
@@ -20,189 +25,7 @@
   </div>
   <div class="view__body">
     <div class="container">
-      <table class="advertisements-list">
-        <thead>
-        <tr>
-          <th>Posição</th>
-          <th>Tier</th>
-          <th>Equipe</th>
-          <th>Membros</th>
-          <th></th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr class="advertisement">
-          <td>
-            <img src="assets/images/top-icon.png" class="advertisement__icon" alt="">
-          </td>
-          <td class="advertisement__tier-limits">
-            Platina III - Diamante V
-          </td>
-          <td class="advertisement__team">TPB - Tibbers, porrada e bomba</td>
-          <td>
-            <div class="members">
-              <div class="members__icon">
-                <img
-                  class="members__img"
-                  title="SomaKruz"
-                  src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/profileicon/664.png" alt="">
-              </div>
-              <div class="members__icon">
-                <img
-                  class="members__img"
-                  title="lukahenry"
-                  src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/profileicon/781.png" alt="">
-              </div>
-              <div class="members__icon">
-                <img
-                  class="members__img"
-                  title="PHGamerazer"
-                  src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/profileicon/786.png" alt="">
-              </div>
-            </div>
-          </td>
-          <td>
-            <a href="" class="button button--primary">Candidatar-se</a>
-          </td>
-        </tr>
-        <tr class="advertisement">
-          <td>
-            <img src="assets/images/mid-icon.png" class="advertisement__icon"  alt="">
-          </td>
-          <td class="advertisement__tier-limits">
-            Mestre - Desafiante
-          </td>
-          <td class="advertisement__team">HYP - Harry Poke</td>
-          <td>
-            <div class="members">
-              <div class="members__icon">
-                <img
-                  class="members__img"
-                  title="SomaKruz"
-                  src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/profileicon/839.png" alt="">
-              </div>
-              <div class="members__icon">
-                <img
-                  class="members__img"
-                  title="lukahenry"
-                  src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/profileicon/774.png" alt="">
-              </div>
-              <div class="members__icon">
-                <img
-                  class="members__img"
-                  title="PHGamerazer"
-                  src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/profileicon/770.png" alt="">
-              </div>
-            </div>
-          </td>
-          <td>
-            <a href="" class="button button--primary">Candidatar-se</a>
-          </td>
-        </tr>
-        <tr class="advertisement">
-          <td>
-            <img src="assets/images/bot-icon.png" class="advertisement__icon"  alt="">
-          </td>
-          <td class="advertisement__tier-limits">
-            Prata V - Platina V
-          </td>
-          <td class="advertisement__team">CNM - Cazuza Não Morreu</td>
-          <td>
-            <div class="members">
-              <div class="members__icon">
-                <img
-                  class="members__img"
-                  title="SomaKruz"
-                  src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/profileicon/907.png" alt="">
-              </div>
-              <div class="members__icon">
-                <img
-                  class="members__img"
-                  title="lukahenry"
-                  src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/profileicon/903.png" alt="">
-              </div>
-              <div class="members__icon">
-                <img
-                  class="members__img"
-                  title="PHGamerazer"
-                  src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/profileicon/940.png" alt="">
-              </div>
-            </div>
-          </td>
-          <td>
-            <a href="" class="button button--primary">Candidatar-se</a>
-          </td>
-        </tr>
-        <tr class="advertisement">
-          <td>
-            <img src="assets/images/jungle-icon.png" class="advertisement__icon"  alt="">
-          </td>
-          <td class="advertisement__tier-limits">
-            Bronze V - Ouro I
-          </td>
-          <td class="advertisement__team">YOP - Yasuo Open</td>
-          <td>
-            <div class="members">
-              <div class="members__icon">
-                <img
-                  class="members__img"
-                  title="SomaKruz"
-                  src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/profileicon/989.png" alt="">
-              </div>
-              <div class="members__icon">
-                <img
-                  class="members__img"
-                  title="lukahenry"
-                  src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/profileicon/948.png" alt="">
-              </div>
-              <div class="members__icon">
-                <img
-                  class="members__img"
-                  title="PHGamerazer"
-                  src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/profileicon/985.png" alt="">
-              </div>
-            </div>
-          </td>
-          <td>
-            <a href="" class="button button--primary">Candidatar-se</a>
-          </td>
-        </tr>
-        <tr class="advertisement">
-          <td>
-            <img src="assets/images/support-icon.png" class="advertisement__icon"  alt="">
-          </td>
-          <td class="advertisement__tier-limits">
-            Prata V - Ouro I
-          </td>
-          <td class="advertisement__team">T97 - Lais de Guia</td>
-          <td>
-            <div class="members">
-              <div class="members__icon">
-                <img
-                  class="members__img"
-                  title="SomaKruz"
-                  src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/profileicon/989.png" alt="">
-              </div>
-              <div class="members__icon">
-                <img
-                  class="members__img"
-                  title="lukahenry"
-                  src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/profileicon/948.png" alt="">
-              </div>
-              <div class="members__icon">
-                <img
-                  class="members__img"
-                  title="PHGamerazer"
-                  src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/profileicon/985.png" alt="">
-              </div>
-            </div>
-          </td>
-          <td>
-            <a href="" class="button button--primary">Candidatar-se</a>
-          </td>
-        </tr>
-        </tbody>
-      </table>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
