--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,7 @@
 $bg-color: #000a13;
-$title-color: #c9aa71;
 $border-color: #c79a3c;
+$text-color: #d5cBa4;
+$title-color: #c9aa71;
 $menu-border-color: #c9aa71;
 $link-color: #c9aa71;
 $link-hover-color: #f1e6d0;
