--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import "scss/variables";
+@import "scss/buttons";
 @import "scss/typography";
 @import "scss/view";
 
@@ -14,6 +15,7 @@ html {
 }
 body {
   background-color: rgba($bg-color, .4);
+  color: $text-color;
   height: 100%;
   width: 100%;
 }
@@ -129,12 +131,12 @@ body {
       text-transform: uppercase;
     }
     &__team {
-      color: #D5CBA4;
       font-weight: 400;
     }
   }
   .members {
     display: flex;
+    font-size: 14px;
     &__icon {
       border-radius: 50%;
       display: inline-flex;
@@ -152,23 +154,57 @@ body {
   }
 }
 
-.button {
-  background-color: #2C3339;
-  border: 1px solid #e0c481;
-  color: #e0c481;
-  font-size: 12px;
-  padding: .25rem .975rem;
-  text-align: center;
-  text-decoration: none;
-  text-transform: uppercase;
-  transition: box-shadow .4s linear;
-  &:focus,
-  &:hover {
-    box-shadow: 0 0 0 1px #e0c481;
-    outline: none;
+.filters {
+  align-items: flex-end;
+  color: $text-color;
+  font-size: 14px;
+  margin-top: 1rem;
+  &__label {
+    display: block;
+    margin-bottom: .5rem;
   }
-  &:hover {
-    color: #fff;
-    text-decoration: none;
+  &__select {
+    background-color: rgba($bg-color, .4);
+    border: 1px solid $border-color;
+    color: $text-color;
+    cursor: pointer;
+    display: flex;
+    height: 32px;
+    width: 100%;
+    option {
+      color: #000;
+    }
+  }
+}
+
+.f {
+  &-label {
+    display: block;
+    margin-bottom: .5rem;
+  }
+  &-control {
+    background-color: rgba($bg-color, .4);
+    border: 1px solid $border-color;
+    color: $text-color;
+    display: flex;
+    height: 32px;
+    transition: box-shadow .4s linear;
+    width: 100%;
+    option {
+      color: #000;
+    }
+    &:focus {
+      box-shadow: 0 0 0 1px rgba(#e0c481, .8);
+      outline: none;
+    }
+  }
+  input:not([type]).f-control {
+    padding-left: 6px;
+    padding-right: 6px;
+  }
+  select.f-control {
+    padding-left: 4px;
+    padding-right: 4px;
+    cursor: pointer;
   }
 }
