Implementado componente de header e de login. Definições dos componentes de formulário

--- a/src/app/teams/teams-list/teams-list.component.html
+++ b/src/app/teams/teams-list/teams-list.component.html
@@ -1,4 +1,6 @@
-<h3 class="mt-5 mb-3">Suas equipes <a href="" class="button button--primary ml-5">Criar equipe</a></h3>
+<h3 class="mt-5 mb-3">Suas equipes
+  <a href="" class="button button--primary ml-5">Criar equipe</a>
+</h3>
 <div class="teams">
   <div class="team">
     <div class="team__header">
@@ -7,9 +9,5 @@
     </div>
     <div class="team__body"></div>
   </div>
-  <div class="team"></div>
-  <div class="team"></div>
-  <div class="team"></div>
-  <div class="team"></div>
   <div class="team"></div>
 </div>
