--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,31 +1,15 @@
 <div class="view">
   <div class="view__header">
-    <div class="logo">
-      <img src="assets/images/lol-team-builder.svg" class="logo__image" alt="">
-    </div>
-    <ul class="menu">
-      <li class="menu__item">
-        <a
-          routerLinkActive="menu__link--active"
-          routerLink="vacancies" class="menu__link">Vagas</a>
-      </li>
-      <li class="menu__item">
-        <a
-          routerLinkActive="menu__link--active"
-          routerLink="teams"
-          class="menu__link">Equipes</a>
-      </li>
-      <li class="menu__item">
-        <a href="" class="menu__link">Ajuda</a>
-      </li>
-    </ul>
-    <div class="user">
-      <a href="" class="user__link">Entrar</a>
-    </div>
+    <ltb-header></ltb-header>
   </div>
   <div class="view__body">
     <div class="container">
-      <router-outlet></router-outlet>
+      <div class="row">
+        <router-outlet></router-outlet>
+      </div>
     </div>
+  </div>
+  <div class="view__footer">
+    LTB - Lol Team Builder &copy; 2018 - Todos os direitos reservados.
   </div>
 </div>
